<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/bg_color"
    android:layout_marginHorizontal="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/blank_profile_picture"
                android:layout_marginTop="22dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/helloTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_margin="8dp"
                app:layout_constraintTop_toTopOf="@id/profile_image"
                app:layout_constraintStart_toEndOf="@id/profile_image"
                />

            <TextView
                android:id="@+id/userNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Omar Tamer"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/profile_image"
                app:layout_constraintTop_toBottomOf="@id/helloTv"
                app:layout_constraintBottom_toBottomOf="@id/profile_image"
                />

            <TextView
                android:id="@+id/yourSkillsTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_skills"
                android:textColor="@color/purple"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/profile_image"
                app:layout_constraintStart_toStartOf="@id/profile_image"
                app:layout_constraintBottom_toTopOf="@id/playStyleCard"
                />

            <TextView
                android:id="@+id/reviewSkillsTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/review_skill"
                android:textColor="@color/gray"
                android:layout_margin="15dp"
                app:layout_constraintTop_toTopOf="@id/yourSkillsTv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/yourSkillsTv"
                />

    <androidx.cardview.widget.CardView
        android:id="@+id/playStyleCard"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/yourSkillsTv"
        app:layout_constraintBottom_toTopOf="@id/speedCard"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/playstyle"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/poppins_medium"
            android:textSize="21sp"
            />

            <TextView
                android:id="@+id/playStyleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                tools:text="Defensive"
                android:layout_marginEnd="18dp"
                android:textColor="@color/gray"
                android:fontFamily="@font/poppins_medium"
                android:textSize="21sp"
                />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/speedCard"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="5dp"
        app:cardCornerRadius="10dp"
       app:layout_constraintTop_toBottomOf="@id/playStyleCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/powerCard"
        app:layout_constraintBottom_toTopOf="@id/chatBotCard"
        >

            <TextView
                android:id="@+id/speedTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="50"
                android:textColor="@color/gray"
                android:layout_marginEnd="18dp"
                android:fontFamily="@font/poppins_medium"
                android:layout_gravity="center_horizontal|end|center_vertical"
                android:textSize="21sp"
                />

        <TextView
            android:id="@+id/speedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speed"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center_horizontal|start|center_vertical"
            android:textSize="21sp"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/powerCard"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="5dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/speedCard"
        app:layout_constraintTop_toTopOf="@id/speedCard"
        app:layout_constraintBottom_toBottomOf="@id/speedCard"
        >

        <TextView
            android:id="@+id/powerTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="70"
            android:textColor="@color/gray"
            android:layout_marginEnd="18dp"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center_horizontal|end|center_vertical"
            android:textSize="21sp"
            />

        <TextView
            android:id="@+id/powerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|start|center_vertical"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:textStyle="bold"
            android:text="@string/power" />

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/chatBotCard"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="5dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/speedCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/myBookingCard"
        app:layout_constraintBottom_toTopOf="@id/userChatCard"
        >

        <TextView
            android:id="@+id/chatBotBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat_bot"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:background="@drawable/bg_profile_button"
            app:drawableTopCompat="@drawable/ic_chatbot"

            />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/myBookingCard"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="5dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/powerCard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/chatBotCard"
        app:layout_constraintBottom_toTopOf="@id/bookingCard"
        >

        <TextView
            android:id="@+id/myBookingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/my_bookings"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:drawableTopCompat="@drawable/ic_list" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/bookingCard"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="5dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/myBookingCard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/userChatCard"
        >

        <TextView
            android:id="@+id/bookingBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/book_court"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:drawableTopCompat="@drawable/ic_list" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/userChatCard"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="5dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/chatBotCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bookingCard"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:id="@+id/userChatBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_chat"
            android:textColor="@color/black"
            android:textSize="21sp"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:background="@drawable/bg_profile_button"
            app:drawableTint="@color/purple"
            app:drawableTopCompat="@drawable/ic_user" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>