<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditProfileActivity"
    android:background="@color/bg_color"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:civ_border_width="2dp"
        android:src="@drawable/blank_profile_picture"
        app:civ_border_color="@color/purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/userNameTv"
        android:layout_marginTop="20dp"
        />


    <TextView
        android:id="@+id/userNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Omar Tamer"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textSize="26sp"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        app:layout_constraintStart_toStartOf="@id/profileImage"
        app:layout_constraintEnd_toEndOf="@id/profileImage"
        app:layout_constraintBottom_toTopOf="@id/userEmailTv"
        />

    <TextView
        android:id="@+id/userEmailTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="omartamer@gmail.com"
        android:textColor="@color/gray"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/userNameTv"
        app:layout_constraintTop_toBottomOf="@id/userNameTv"
        app:layout_constraintEnd_toEndOf="@id/userNameTv"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/userEmailTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/passwordLayout"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_edit"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        app:layout_constraintTop_toBottomOf="@id/phoneLayout"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/confirmPasswordLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="password_toggle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/saveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="password_toggle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPasswordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textStyle="bold"
        android:textSize="18sp"
        app:backgroundTint="@null"
        android:background="@drawable/bg_button"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/deleteBtn"
        />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:text="@string/delete_account"
        app:backgroundTint="@null"
        android:background="@drawable/bg_logout_button"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saveBtn"
        />

</androidx.constraintlayout.widget.ConstraintLayout>